<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_app"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center|center_horizontal">

        <ImageView
            android:id="@+id/login_logo_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/null_str"
            android:src="@drawable/logo" />
        <TextView 
            android:id="@+id/login_slogan_id"
            android:textColor="#fff"
            android:textSize="20dp"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_slogan_str"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:padding="20dp" >

        <EditText
            android:id="@+id/login_acc_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_acc_mini"
            android:hint="@string/login_acc_hint" />

        <EditText
            android:id="@+id/login_pass_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_pass_mini"
            android:inputType="textPassword"
            android:hint="@string/login_pass_hint" />

        <Button
            android:id="@+id/login_button_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#fff"
            android:padding="10dp"
            android:textSize="20dp"
            android:background="@drawable/common_button_default"
            android:text="@string/login_button_login" />

        <TextView
            android:id="@+id/login_register_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:textColor="#f35c15"
            android:layout_marginTop="10dp"
            android:text="@string/login_register_tv" />
    </LinearLayout>

</LinearLayout>